--- a/assets/css/index-backup.css
+++ b/assets/css/index-backup.css
@@ -4,139 +4,415 @@
 /********\
 * FONTS  *
 \********/
-@font-face { font-family: 'agendamediumultracondensed'; src: url("../fonts/agenda-mediumultracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumultracondensed-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendamedium_italic'; src: url("../fonts/agenda-mediumitalic-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumitalic-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendamediumextracondensed'; src: url("../fonts/agenda-mediumextracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumextracondensed-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendamediumcondensed'; src: url("../fonts/agenda-mediumcondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumcondensed-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendamedium'; src: url("../fonts/agenda-medium-webfont.woff2") format("woff2"), url("../fonts/agenda-medium-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendaboldultracondensed'; src: url("../fonts/agenda-boldultracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-boldultracondensed-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendaboldextracondensed'; src: url("../fonts/agenda-boldextracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-boldextracondensed-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendaboldcondensed'; src: url("../fonts/agenda-boldcondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-boldcondensed-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'agendabold'; src: url("../fonts/agenda-bold-webfont.woff2") format("woff2"), url("../fonts/agenda-bold-webfont.woff") format("woff"); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: "agendamediumultracondensed";
+  src: url("../fonts/agenda-mediumultracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumultracondensed-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendamedium_italic";
+  src: url("../fonts/agenda-mediumitalic-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumitalic-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendamediumextracondensed";
+  src: url("../fonts/agenda-mediumextracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumextracondensed-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendamediumcondensed";
+  src: url("../fonts/agenda-mediumcondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-mediumcondensed-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendamedium";
+  src: url("../fonts/agenda-medium-webfont.woff2") format("woff2"), url("../fonts/agenda-medium-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendaboldultracondensed";
+  src: url("../fonts/agenda-boldultracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-boldultracondensed-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendaboldextracondensed";
+  src: url("../fonts/agenda-boldextracondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-boldextracondensed-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendaboldcondensed";
+  src: url("../fonts/agenda-boldcondensed-webfont.woff2") format("woff2"), url("../fonts/agenda-boldcondensed-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "agendabold";
+  src: url("../fonts/agenda-bold-webfont.woff2") format("woff2"), url("../fonts/agenda-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 /*******************\
 * Generic Functions *
 \*******************/
-.font-oswald { font-family: "Oswald", sans-serif; }
+.font-oswald {
+  font-family: "Oswald", sans-serif;
+}
 
-.font-raleway { font-family: "Raleway", sans-serif; }
+.font-raleway {
+  font-family: "Raleway", sans-serif;
+}
 
-.font-agenda-medium-ultra-condensed { font-family: 'agendamediumultracondensed'; }
+.font-agenda-medium-ultra-condensed {
+  font-family: "agendamediumultracondensed";
+}
 
-.font-agenda-medium-italic { font-family: 'agendamedium_italic'; }
+.font-agenda-medium-italic {
+  font-family: "agendamedium_italic";
+}
 
-.font-agenda-medium-extra-condensed { font-family: 'agendamediumextracondensed'; }
+.font-agenda-medium-extra-condensed {
+  font-family: "agendamediumextracondensed";
+}
 
-.font-agenda-medium-condensed { font-family: 'agendamediumcondensed'; }
+.font-agenda-medium-condensed {
+  font-family: "agendamediumcondensed";
+}
 
-.font-agenda-medium { font-family: 'agendamedium'; }
+.font-agenda-medium {
+  font-family: "agendamedium";
+}
 
-.font-agenda-bold-ultra-condensed { font-family: 'agendaboldultracondensed'; }
+.font-agenda-bold-ultra-condensed {
+  font-family: "agendaboldultracondensed";
+}
 
-.font-agenda-bold-extra-condensed { font-family: 'agendaboldextracondensed'; }
+.font-agenda-bold-extra-condensed {
+  font-family: "agendaboldextracondensed";
+}
 
-.font-agenda-bold-condensed { font-family: 'agendaboldcondensed'; }
+.font-agenda-bold-condensed {
+  font-family: "agendaboldcondensed";
+}
 
-.font-agenda-bold { font-family: 'agendabold'; }
+.font-agenda-bold {
+  font-family: "agendabold";
+}
 
-.bg-black { background-color: black; }
+.bg-black {
+  background-color: rgb(0, 0, 0);
+}
 
-.bg-green-dark-primary { background-color: #313415; }
+.bg-green-dark-primary {
+  background-color: rgb(49, 52, 21);
+}
 
-.bg-green-dark-secondary { background-color: #616729; }
+.bg-green-dark-secondary {
+  background-color: rgb(97, 103, 41);
+}
 
-.bg-green-light-primary { background-color: #9dab13; }
+.bg-green-light-primary {
+  background-color: rgb(157, 171, 19);
+}
 
-.bg-green-light-secondary { background-color: #bdc46f; }
+.bg-green-light-secondary {
+  background-color: rgb(189, 196, 111);
+}
 
-.text-black { color: black; }
+.text-black {
+  color: rgb(0, 0, 0);
+}
 
-.text-green-dark-primary { color: #313415; }
+.text-green-dark-primary {
+  color: rgb(49, 52, 21);
+}
 
-.text-green-dark-secondary { color: #616729; }
+.text-green-dark-secondary {
+  color: rgb(97, 103, 41);
+}
 
-.text-green-light-primary { color: #9dab13; }
+.text-green-light-primary {
+  color: rgb(157, 171, 19);
+}
 
-.text-green-light-secondary { color: #bdc46f; }
+.text-green-light-secondary {
+  color: rgb(189, 196, 111);
+}
 
-.h-100 { height: 100%; }
+.h-100 {
+  height: 100%;
+}
 
-.deg-black { background: black; background: -moz-linear-gradient(top, black 18%, rgba(0, 0, 0, 0.93) 24%, rgba(255, 255, 255, 0) 100%); background: -webkit-gradient(left top, left bottom, color-stop(18%, black), color-stop(24%, rgba(0, 0, 0, 0.93)), color-stop(100%, rgba(255, 255, 255, 0))); background: -webkit-linear-gradient(top, black 18%, rgba(0, 0, 0, 0.93) 24%, rgba(255, 255, 255, 0) 100%); background: -o-linear-gradient(top, black 18%, rgba(0, 0, 0, 0.93) 24%, rgba(255, 255, 255, 0) 100%); background: -ms-linear-gradient(top, black 18%, rgba(0, 0, 0, 0.93) 24%, rgba(255, 255, 255, 0) 100%); background: linear-gradient(to bottom, black 18%, rgba(0, 0, 0, 0.93) 24%, rgba(255, 255, 255, 0) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=0 ); }
+.deg-black {
+  background: rgb(0, 0, 0);
+  background: -webkit-gradient(left top, left bottom, color-stop(18%, rgb(0, 0, 0)), color-stop(24%, rgba(0, 0, 0, 0.93)), color-stop(100%, rgba(255, 255, 255, 0)));
+  background: linear-gradient(to bottom, rgb(0, 0, 0) 18%, rgba(0, 0, 0, 0.93) 24%, rgba(255, 255, 255, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#000000", endColorstr="#ffffff", GradientType=0 );
+}
 
-img.ramita { width: 60px; }
+img.ramita {
+  width: 60px;
+}
 
-.h-123 { height: 123px; }
+.h-123 {
+  height: 123px;
+}
 
-h1 { font-size: 48px; font-family: 'agendabold'; text-transform: uppercase; letter-spacing: -0.12rem; }
+h1 {
+  font-size: 48px;
+  font-family: "agendabold";
+  text-transform: uppercase;
+  letter-spacing: -0.12rem;
+}
 
-h2 { color: #9dab13; font-size: 48px; font-family: 'agendabold'; text-transform: uppercase; }
+h2 {
+  color: rgb(157, 171, 19);
+  font-size: 48px;
+  font-family: "agendabold";
+  text-transform: uppercase;
+}
 
 /**************\
 * Custom Style *
 \**************/
-body { background-color: #f8f8f8; font-family: 'Agenda'; margin-bottom: 0; padding-bottom: 0; }
+body {
+  background-color: #f8f8f8;
+  font-family: "Agenda";
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 
-#header img { height: 100px; }
-#header .custom-navbar-nav { margin-right: 0; }
-#header .custom-navbar-nav li a.nav-link { color: #fff; text-transform: uppercase; font-size: 20px; }
-#header .custom-navbar-nav li a.nav-link:before { font-size: 30px; }
-#header .custom-navbar-nav li a.nav-link:hover { color: #9dab13; }
-#header .custom-navbar-nav li a.nav-link:hover:hover:before { color: #9dab13; }
-#header .custom-navbar-nav li a.nav-link .span-a { display: block; font-family: 'agendabold' !important; }
-#header .custom-navbar-nav li.active a { color: #9dab13; }
-#header .custom-navbar-nav li.active a:before { color: #9dab13; }
+#header img {
+  height: 100px;
+}
+#header .custom-navbar-nav {
+  margin-right: 0;
+}
+#header .custom-navbar-nav li a.nav-link {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+#header .custom-navbar-nav li a.nav-link:before {
+  font-size: 30px;
+}
+#header .custom-navbar-nav li a.nav-link:hover {
+  color: rgb(157, 171, 19);
+}
+#header .custom-navbar-nav li a.nav-link:hover:hover:before {
+  color: rgb(157, 171, 19);
+}
+#header .custom-navbar-nav li a.nav-link .span-a {
+  display: block;
+  font-family: "agendabold" !important;
+}
+#header .custom-navbar-nav li.active a {
+  color: rgb(157, 171, 19);
+}
+#header .custom-navbar-nav li.active a:before {
+  color: rgb(157, 171, 19);
+}
 
-header { height: 100vh; }
-header .welcome { position: absolute; left: 0; top: 0; width: 100%; height: 100vh; }
-header .welcome .row { height: 100vh !important; }
+header {
+  height: 100vh;
+}
+header .welcome {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+}
+header .welcome .row {
+  height: 100vh !important;
+}
 
-#slideHero { position: relative; height: 100vh; }
-#slideHero .overlay { position: absolute; top: 0; bottom: 0; left: 0; right: 0; color: white; }
+#slideHero {
+  position: relative;
+  height: 100vh;
+}
+#slideHero .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: white;
+}
 
-#info-general { margin-top: 100px; }
-#info-general small.date { font-size: 1.2rem; letter-spacing: 0; line-height: 2.5rem; }
-#info-general img.principal { max-width: 80%; transform: rotate(-10deg); -webkit-box-shadow: -22px -9px 73px -9px rgba(0, 0, 0, 0.75); -moz-box-shadow: -22px -9px 73px -9px rgba(0, 0, 0, 0.75); box-shadow: -22px -9px 73px -9px rgba(0, 0, 0, 0.75); }
+#info-general {
+  margin-top: 100px;
+}
+#info-general small.date {
+  font-size: 1.2rem;
+  letter-spacing: 0;
+  line-height: 2.5rem;
+}
+#info-general img.principal {
+  max-width: 80%;
+  transform: rotate(-10deg);
+  box-shadow: -22px -9px 73px -9px rgba(0, 0, 0, 0.75);
+}
 
-#distances button { font-family: 'agendabold'; color: #fff; text-transform: uppercase; background-color: transparent; border: none; border: 1px solid transparent; }
-#distances button small { font-size: 18px; }
-#distances button span.span-hero { border-top: 5px solid #9dab13; border-bottom: 5px solid #9dab13; font-size: 100px; }
-#distances button span.span-bot { font-size: 25px; }
-#distances button span.span-bot-k60 { font-size: 25px; }
-#distances button:focus { outline: none; }
-#distances button:hover { border: 1px solid #9dab13; color: #bdc46f; }
-#distances button:hover small { font-size: 20px; }
-#distances button:hover span.span-hero { border-top: 5px solid #bdc46f; border-bottom: 5px solid #bdc46f; font-size: 100px; }
-#distances button:hover span.span-bot { font-size: 40px; }
-#distances button:hover span.span-bot-k60 { font-size: 40px; }
+#distances button {
+  font-family: "agendabold";
+  color: #fff;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  border: 1px solid transparent;
+}
+#distances button small {
+  font-size: 18px;
+}
+#distances button span.span-hero {
+  border-top: 5px solid rgb(157, 171, 19);
+  border-bottom: 5px solid rgb(157, 171, 19);
+  font-size: 100px;
+}
+#distances button span.span-bot {
+  font-size: 25px;
+}
+#distances button span.span-bot-k60 {
+  font-size: 25px;
+}
+#distances button:focus {
+  outline: none;
+}
+#distances button:hover {
+  border: 1px solid rgb(157, 171, 19);
+  color: rgb(189, 196, 111);
+}
+#distances button:hover small {
+  font-size: 20px;
+}
+#distances button:hover span.span-hero {
+  border-top: 5px solid rgb(189, 196, 111);
+  border-bottom: 5px solid rgb(189, 196, 111);
+  font-size: 100px;
+}
+#distances button:hover span.span-bot {
+  font-size: 40px;
+}
+#distances button:hover span.span-bot-k60 {
+  font-size: 40px;
+}
 
-#sold-tickets { margin-top: 100px; }
-#sold-tickets ul li { list-style-type: none; }
-#sold-tickets table { font-weight: bold; }
-#sold-tickets table thead th.th-active { border-top: 20px solid #9dab13; border-bottom: 1px solid #9dab13; }
-#sold-tickets table tbody td.td-active { border-bottom: 1px solid #9dab13; }
-#sold-tickets table tbody td.td-active-end { border-bottom: 20px solid #9dab13; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
-#sold-tickets a { background-color: #9dab13; color: #fff; width: 40%; }
-#sold-tickets a:hover { color: #fff; background-color: #616729; font-weight: bold; }
+#sold-tickets {
+  margin-top: 100px;
+}
+#sold-tickets ul li {
+  list-style-type: none;
+}
+#sold-tickets table {
+  font-weight: bold;
+}
+#sold-tickets table thead th.th-active {
+  border-top: 20px solid rgb(157, 171, 19);
+  border-bottom: 1px solid rgb(157, 171, 19);
+}
+#sold-tickets table tbody td.td-active {
+  border-bottom: 1px solid rgb(157, 171, 19);
+}
+#sold-tickets table tbody td.td-active-end {
+  border-bottom: 20px solid rgb(157, 171, 19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+#sold-tickets a {
+  background-color: rgb(157, 171, 19);
+  color: #fff;
+  width: 40%;
+}
+#sold-tickets a:hover {
+  color: #fff;
+  background-color: rgb(97, 103, 41);
+  font-weight: bold;
+}
 
-footer .icon-social a { color: #fff; border: 2px solid #fff; }
-footer .icon-social a:hover { color: #9dab13; border: 2px solid #9dab13; }
-footer img { height: 100px; }
-footer a.contact { color: #fff; }
-footer a.contact:hover { color: #9dab13; text-decoration: none; }
+footer .icon-social a {
+  color: #fff;
+  border: 2px solid #fff;
+}
+footer .icon-social a:hover {
+  color: rgb(157, 171, 19);
+  border: 2px solid rgb(157, 171, 19);
+}
+footer img {
+  height: 100px;
+}
+footer a.contact {
+  color: #fff;
+}
+footer a.contact:hover {
+  color: rgb(157, 171, 19);
+  text-decoration: none;
+}
 
-#montana { position: absolute; bottom: -1px; width: 100%; height: 38px; background: url("../assets/img/patron/mountains_1.png") repeat-x; left: 0; z-index: 99; }
+#montana {
+  position: absolute;
+  bottom: -1px;
+  width: 100%;
+  height: 38px;
+  background: url("../assets/img/patron/mountains_1.png") repeat-x;
+  left: 0;
+  z-index: 99;
+}
 
-@media (min-width: 768px) { img.ramita { width: 60px; }
-  .h-123 { height: 123px; }
-  h1 { font-size: 48px; font-family: 'agendabold'; text-transform: uppercase; letter-spacing: -0.12rem; }
-  h2 { color: #9dab13; font-size: 48px; font-family: 'agendabold'; text-transform: uppercase; }
-  #distances button small { font-size: 20px; }
-  #distances button span.span-hero { border-top: 5px solid #9dab13; border-bottom: 5px solid #9dab13; font-size: 100px; }
-  #distances button span.span-bot { font-size: 40px; }
-  #distances button span.span-bot-k60 { font-size: 40px; }
-  #distances button:hover { border: 1px solid #9dab13; color: #bdc46f; }
-  #distances button:hover small { font-size: 20px; }
-  #distances button:hover span.span-hero { border-top: 5px solid #bdc46f; border-bottom: 5px solid #bdc46f; font-size: 100px; }
-  #distances button:hover span.span-bot { font-size: 40px; }
-  #distances button:hover span.span-bot-k60 { font-size: 40px; } }
-
-/*# sourceMappingURL=index-backup.css.map */
+@media (min-width: 768px) {
+  img.ramita {
+    width: 60px;
+  }
+  .h-123 {
+    height: 123px;
+  }
+  h1 {
+    font-size: 48px;
+    font-family: "agendabold";
+    text-transform: uppercase;
+    letter-spacing: -0.12rem;
+  }
+  h2 {
+    color: rgb(157, 171, 19);
+    font-size: 48px;
+    font-family: "agendabold";
+    text-transform: uppercase;
+  }
+  #distances button small {
+    font-size: 20px;
+  }
+  #distances button span.span-hero {
+    border-top: 5px solid rgb(157, 171, 19);
+    border-bottom: 5px solid rgb(157, 171, 19);
+    font-size: 100px;
+  }
+  #distances button span.span-bot {
+    font-size: 40px;
+  }
+  #distances button span.span-bot-k60 {
+    font-size: 40px;
+  }
+  #distances button:hover {
+    border: 1px solid rgb(157, 171, 19);
+    color: rgb(189, 196, 111);
+  }
+  #distances button:hover small {
+    font-size: 20px;
+  }
+  #distances button:hover span.span-hero {
+    border-top: 5px solid rgb(189, 196, 111);
+    border-bottom: 5px solid rgb(189, 196, 111);
+    font-size: 100px;
+  }
+  #distances button:hover span.span-bot {
+    font-size: 40px;
+  }
+  #distances button:hover span.span-bot-k60 {
+    font-size: 40px;
+  }
+}/*# sourceMappingURL=index-backup.css.map */
