--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -190,6 +190,10 @@ img.ramita {
   height: 123px;
 }
 
+.text-center {
+  text-align: center;
+}
+
 h1 {
   font-size: 48px;
   font-family: 'agendabold';
@@ -608,17 +612,21 @@ header {
   }
 }
 
+.mt-mobile {
+  margin-top: 2rem;
+}
 
 footer {
 
   .icon-social {
     a {
       color: #fff;
-      border: 2px solid #fff;
+      border: 2px solid transparent;
+      font-size: 2rem;
       
       &:hover {
         color: $green-light-primary;
-        border: 2px solid $green-light-primary;
+        border: 2px solid transparent;
       }
     }
   }
@@ -860,5 +868,9 @@ footer {
     h2 {
       font-size: 40px;
     }
+  }
+
+  .mt-mobile {
+    margin-top: 0;
   }
 }
