--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -551,6 +551,23 @@ footer a.contact:hover {
   text-decoration: none;
 }
 
+.timetrack-footer {
+  text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  color: #fff;
+  margin-top: 2rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  padding-top: 1rem;
+}
+.timetrack-footer a {
+  color: #fff;
+  text-decoration: none;
+}
+.timetrack-footer a:hover {
+  color: rgb(248, 102, 36);
+}
+
 @media (min-width: 768px) {
   .hero-title--primary, .hero-title--secondary {
     font-size: 4rem !important;
