--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -654,6 +654,25 @@ footer {
   }
 }
 
+.timetrack-footer {
+  text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  color: #fff;
+  margin-top: 2rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  padding-top: 1rem;
+
+  a {
+    color: #fff;
+    text-decoration: none;
+
+    &:hover {
+      color: rgb(248, 102, 36);
+    }
+  }
+}
+
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .hero-title--primary, .hero-title--secondary {
