--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -365,7 +365,27 @@ header .hero--wrapper-flex {
 }
 
 #info-general {
-  margin-top: 100px;
+  margin-top: 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  position: relative;
+}
+#info-general::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url("../img/patron/patron-lineas-fondo.png");
+  background-repeat: repeat;
+  background-size: auto;
+  opacity: 0.15;
+  z-index: 0;
+}
+#info-general .container {
+  position: relative;
+  z-index: 1;
 }
 #info-general .col-info-date {
   padding-top: 4rem;
