--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -416,7 +416,29 @@ header {
 }
 
 #info-general {
-  margin-top: 100px;
+  margin-top: 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('../img/patron/patron-lineas-fondo.png');
+    background-repeat: repeat;
+    background-size: auto;
+    opacity: 0.15;
+    z-index: 0;
+  }
+
+  .container {
+    position: relative;
+    z-index: 1;
+  }
 
   .col-info-date {
     padding-top: 4rem;
