--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -287,6 +287,8 @@ header .hero--wrapper .btn-inscription {
   margin-top: 1rem;
   width: 250px;
   font-size: 20px;
+  position: relative;
+  z-index: 100;
 }
 header .hero--wrapper .btn-inscription:hover {
   background-color: #172A2F;
@@ -305,7 +307,7 @@ header .hero--wrapper-flex {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  height: 100%;
+  height: 70%;
 }
 
 #montana {
@@ -694,6 +696,9 @@ footer a.contact:hover {
     margin-top: 0;
     height: 100%;
     position: relative;
+  }
+  header .hero--wrapper-flex {
+    height: 100%;
   }
   #info-general .col-info-date {
     padding-top: 0;
