--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -330,6 +330,8 @@ header {
       margin-top: 1rem;
       width: 250px;
       font-size: 20px;
+      position: relative;
+      z-index: 100;
 
       &:hover {
         background-color: $green-dark-secondary;
@@ -342,7 +344,7 @@ header {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    height: 100%;
+    height: 70%;
   }
 }
 
@@ -840,6 +842,12 @@ footer {
     margin-top: 0;
     height: 100%;
     position: relative;
+  }
+
+  header {
+    .hero--wrapper-flex {
+      height: 100%;
+    }
   }
 
   #info-general {
